--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,38 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin:16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin:8px;
+  padding:8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px;
+  margin-top:16px;
+  margin-bottom:16px;
+  margin-left:8px;
+  margin-right:8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align:center;
+  padding:8px;
 }
 
 button {
+  display:block;
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  margin-left:24px auto;
+  margin-right:24px auto;
+  margin-top:8px;
+  margin-bottom:8px;
 }
