--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,26 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal{
+  display:flex;
+  gap:10px;
+  padding:20px;
+}
+
+.header{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  font-weight:700;
+
+}
+
+.icon{
+  flex-shrink:0;
+}
+
+.text{
+  padding:10px;
+
+}
