--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,40 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul{
+  list-style-type:none;
+}
+
+a{
+  text-decoration:none;
+  color:black;
+}
+
+.header{
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:100px;
+}
+
+ul{
+  display:flex;
+  gap:20px;
+}
+
+.footer{
+  display:flex;
+  justify-content:space-between;
+  margin-top:100px;
+  background-color:#eee;
+}
+
+.content{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+.buttons , .input{
+  padding:20px;
+}
